Grigory Kiselev:/OOP1/Lab_1 : Alpha version

--- a/OOP1/OOP1/OOP1/OOP1.csproj
+++ b/OOP1/OOP1/OOP1/OOP1.csproj
@@ -54,11 +54,13 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Line.cs" />
+    <Compile Include="Pentagon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rect.cs" />
     <Compile Include="Rhombus.cs" />
     <Compile Include="Shape.cs" />
+    <Compile Include="Star.cs" />
     <Compile Include="Triangle.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
