--- a/OOP1/OOP1/OOP1/Libs/ShapeLib/ShapeLib/ShapeLib.csproj
+++ b/OOP1/OOP1/OOP1/Libs/ShapeLib/ShapeLib/ShapeLib.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rect.cs" />
+    <Compile Include="Shape.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
